Adjusted the alignments for responsive and removed the row for responsiveness correction.

--- a/Css File/styles.css
+++ b/Css File/styles.css
@@ -1,30 +1,67 @@
-
-.container-fluid {
+#container-fluid {
   margin: 0;
   padding: 0;
-  padding-left: 0;
-  padding-right: 0;
+}
+
+header a {
+  padding-left: 15px;
+}
+
+#navbarNav {
+  padding-right: 15px;
 }
 
 .hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("/Assets/hero.jpg");
   height: 60vh;
   width: 100%;
   background-size: cover;
-  ;
   background-repeat: no-repeat;
-  background-position: center;
-  /* TODO: MODULE_LAYOUT */
-  /* 1. Set a specific height. */
-  /* 2. Position and center the image to scale nicely on all screens. */
+  background-position: 50% 50%;
 }
 
-@media only screen and (min-width: 768px) {
-  /* For desktops phones: */
-  #reservation {
-    width: 400px;
-    position: fixed;
-  }
+.hero-section {
+  /* position: relative; */
+
+}
+
+.hero-image .text{
+  /* text-align: center; */
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  /* position: absolute;
+  top: 30%;
+  left: 23%; */
+}
+
+.hero-image p {
+  color: #b3b7b8;
+}
+
+.hero-image h1 {
+  color: white;
+}
+
+.hero-image .form-outline input {
+  color: #bab9be;
+}
+
+.hero-image .form-outline {
+  width: 50vw;
+}
+
+.card-body .card-text {
+  color: white;
+}
+
+.card-body {
+  bottom: 0;
+  left: 5rem;
+}
+
+.card-body .card-text strong, .card-body .card-text p {
+  letter-spacing: 2px;
 }
